@@ -320,22 +320,14 @@
 
                         <div id="new-florida" class="tab-pane fade panel-body">
                             <div class="row spacer20">
-                                <div class="form-group col-xs-12 col-md-4 col-lg-4">
+                                <div class="form-group col-xs-12 col-md-6 col-lg-6">
                                     <label class="requiredfield control-label" for="">Client Lookup Code:</label>
                                     <input id="" name="" value="" class="form-control input-md" required="" type="text">
                                 </div>
 
-                                <div class="form-group col-xs-12 col-md-4 col-lg-4">
-                                    <label class="requiredfield control-label" for="">Work Comp Policy Number:</label>
+                                <div class="form-group col-xs-12 col-md-6 col-lg-6">
+                                    <label class="requiredfield control-label" for="">Master Marketing Submission Name:</label>
                                     <input id="" name="" value="" class="form-control input-md" required="" type="text">
-                                </div>
-
-                                <div class="form-group col-xs-12 col-md-4 col-lg-4">
-                                    <label class="requiredfield control-label" for="">Effective Date of Change:</label>
-                                    <div class="input-group branch-add">
-                                        <input type="text" class="form-control" name="date" id="expire1" value="" placeholder="">
-                                        <div class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></div>
-                                    </div>
                                 </div>
                             </div>
 
